Unroll @media in :active to fix dark mode bug (hopefully)

--- a/css/jsanimator.css
+++ b/css/jsanimator.css
@@ -209,12 +209,14 @@
     }
     &:active {
       /* Make the button a little darker when pressed */
-      --black-tint: #000000 60%;
-      @media (prefers-color-scheme: dark) {
-        --black-tint: var(--button-current-bg-color) 25%;
-      }
       background-color:
-        color-mix(in srgb, var(--button-current-border-color), var(--black-tint));
+        color-mix(in srgb, var(--button-current-border-color),
+                  #000000 60%);
+      @media (prefers-color-scheme: dark) {
+        background-color:
+          color-mix(in srgb, var(--button-current-border-color),
+                    var(--button-current-bg-color) 25%);
+      }
     }
     border-width: calc(0.125 * var(--text-size) * var(--button-size-modifier));
     border-style: solid;
